--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="description">Description</string>
     <string name="price">Price</string>
     <string name="add_product">Add Product</string>
+    <string name="add_value">Add Value</string>
 </resources>
