--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="price">Price</string>
     <string name="add_product">Add Product</string>
     <string name="add_value">Add Value</string>
+    <string name="_new">New</string>
+    <string name="add_category">Add Category</string>
+    <string name="property">Property</string>
+    <string name="category">Category</string>
+    <string name="category_properties">Category Properties</string>
+    <string name="new_cat_prop">New Category Property</string>
 </resources>
